[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelComponents/Scripts/WallSpawner.gd" type="Script" id=1]

[node name="WallSpawner" type="Timer"]
wait_time = 0.5
autostart = true
script = ExtResource( 1 )

[node name="CleanWhenOut" type="Node2D" parent="."]

[node name="StartTime" type="Timer" parent="."]
one_shot = true

[node name="Duration" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="." to="." method="spawn_tunnel"]
[connection signal="timeout" from="StartTime" to="." method="_on_StartTime_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
